--- a/socials1.html
+++ b/socials1.html
@@ -97,18 +97,6 @@
 
     <div class="wrapper">
 
-      <!-- Start blog Icon -->
-      <div id="blog" onclick="navigate(this.id)" class="social">
-        <span class="icon blog"><i class="fa-solid fa-blog"></i></span>
-      </div>
-      <!-- End blog Icon -->
-
-      <!-- Start email Icon -->
-      <div id="email" onclick="navigate(this.id)" class="social">
-        <span class="icon email"><i class="fa-solid fa-envelope"></i></span>
-      </div>
-      <!-- End email Icon -->
-
       <!-- Start facebook Icon -->
       <div id="facebook" onclick="navigate(this.id)" class="social">
         <span class="icon facebook"><i class="fab fa-facebook"></i></span>
@@ -126,43 +114,6 @@
         <span class="icon linkedin"><i class="fab fa-linkedin"></i></span>
       </div>
       <!-- End linkedin Icon -->
-
-      <!-- Start twitter Icon -->
-      <div id="twitter" onclick="navigate(this.id)" class="social">
-        <span class="icon twitter"><i class="fab fa-twitter"></i></span>
-      </div>
-      <!-- End twitter Icon -->
-
-      <!-- Start reddit Icon -->
-      <div id="reddit" onclick="navigate(this.id)" class="social">
-        <span class="icon reddit"><i class="fab fa-reddit"></i></span>
-      </div>
-      <!-- End reddit Icon -->
-
-      <!-- Start tiktok Icon -->
-      <div id="tiktok" onclick="navigate(this.id)" class="social">
-        <span class="icon tiktok"><i class="fab fa-tiktok"></i></span>
-      </div>
-      <!-- End tiktok Icon -->
-
-      <!-- Start youtube Icon -->
-      <div id="youtube" onclick="navigate(this.id)" class="social">
-        <span class="icon youtube"><i class="fab fa-youtube"></i></span>
-      </div>
-      <!-- End youtube Icon -->
-
-      <!-- Start pinterest Icon -->
-      <div id="pinterest" onclick="navigate(this.id)" class="social">
-        <span class="icon pinterest"><i class="fab fa-pinterest"></i></span>
-      </div>
-      <!-- End pinterest Icon -->
-
-      <!-- Start telegram Icon -->
-      <div id="telegram" onclick="navigate(this.id)" class="social">
-        <span class="icon telegram"><i class="fab fa-telegram"></i></span>
-      </div>
-      <!-- End telegram Icon -->
-
 
 
     </div>
@@ -183,13 +134,13 @@
         }
 
         else if (id === "facebook") {
-          window.open("https://facebook.com/", '_blank').focus(); //Add the url to your facebook page or account
+          window.open("https://www.facebook.com/ddesdenae/", '_blank').focus(); //Add the url to your facebook page or account
         }
         else if (id === "instagram") {
-          window.open("instagram.com", '_blank').focus(); //Add the url to your instagram account
+          window.open("https://www.instagram.com/ddesdenae/", '_blank').focus(); //Add the url to your instagram account
         }
         else if (id === "linkedin") {
-          window.open("https://www.linkedin.com/", '_blank').focus(); //Add the url to your pinterest account
+          window.open("https://www.linkedin.com/in/ddesdenae/", '_blank').focus(); //Add the url to your pinterest account
         }
         else if (id === "twitter") {
           window.open("https://twitter.com/", '_blank').focus(); //Add the url to your pinterest account
